<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.e-nexus</groupId>
	<artifactId>karaf-springWebmvc</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<exec.args>
			--add-opens=java.base/sun.security.rsa=ALL-UNNAMED
			--add-opens=java.base/java.lang=ALL-UNNAMED
			--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
			--add-opens=java.base/java.util=ALL-UNNAMED
			--add-opens=java.base/sun.security.x509=ALL-UNNAMED
			--add-opens=java.base/sun.security.util=ALL-UNNAMED
			--add-reads=java.xml=java.logging
			--add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED
			--patch-module
			java.base=/home/grim/Downloads/apache-karaf-4.4.5/lib/endorsed/org.apache.karaf.specs.locator-4.4.5.jar
			--patch-module
			java.xml=/home/grim/Downloads/apache-karaf-4.4.5/lib/endorsed/org.apache.karaf.specs.java.xml-4.4.5.jar
			--add-opens java.base/java.security=ALL-UNNAMED --add-opens
			java.base/java.net=ALL-UNNAMED --add-opens
			java.base/java.lang=ALL-UNNAMED --add-opens
			java.base/java.util=ALL-UNNAMED --add-opens
			java.naming/javax.naming.spi=ALL-UNNAMED --add-opens
			java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
			--add-exports=java.base/sun.net.www.protocol.file=ALL-UNNAMED
			--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED
			--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED
			--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED
			--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED
			--add-exports=java.base/sun.net.www.content.text=ALL-UNNAMED
			--add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED
			--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED
			--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED
			--add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
			--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</exec.args>


		<!-- for properties see:
		https://codehaus-cargo.github.io/cargo/TomEE+9.x.html -->
		<cargo.maven.containerId>tomcat10x</cargo.maven.containerId>
		<cargo.start.jvmargs>
			-Xdebug
			-Xrunjdwp:transport=dt_socket,server=y,suspend=${debugSuspend},address=8000
			-Xnoagent
			-Djava.compiler=NONE
		</cargo.start.jvmargs>
		<debugSuspend>n</debugSuspend>
		<goals>clean install javadoc:test-javadoc pmd:check
			com.github.spotbugs:spotbugs-maven-plugin:4.8.3.1:check
			checkstyle:check org.codehaus.cargo:cargo-maven3-plugin:1.10.12:run</goals>
		<pax-url-aether>2.6.14</pax-url-aether>
		<pmd.printFailingErrors>true</pmd.printFailingErrors>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>6.1.5</version>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.service.cdi</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>jakarta.enterprise</groupId>
			<artifactId>jakarta.enterprise.cdi-api</artifactId>
			<version>2.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.compendium</artifactId>
			<version>5.0.0</version>
		</dependency>
		<!-- what karaf needs in .m2/repository/ -->
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.fileinstall</artifactId>
			<version>3.7.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf.features</groupId>
			<artifactId>org.apache.karaf.features.core</artifactId>
			<version>4.4.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.configurator</artifactId>
			<version>1.0.16</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.converter</artifactId>
			<version>1.0.14</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf.features</groupId>
			<artifactId>org.apache.karaf.features.extension</artifactId>
			<version>4.4.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.sling</groupId>
			<artifactId>org.apache.sling.commons.johnzon</artifactId>
			<version>1.2.16</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.configadmin.plugin.interpolation</artifactId>
			<version>1.2.8</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.configadmin</artifactId>
			<version>1.9.26</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf.services</groupId>
			<artifactId>org.apache.karaf.services.eventadmin</artifactId>
			<version>4.4.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.fusesource.jansi</groupId>
			<artifactId>jansi</artifactId>
			<version>2.4.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf.config</groupId>
			<artifactId>org.apache.karaf.config.core</artifactId>
			<version>4.4.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.util.function</artifactId>
			<version>1.2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-api</artifactId>
			<version>2.2.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.coordinator</artifactId>
			<version>1.0.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.util.promise</artifactId>
			<version>1.3.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-log4j2</artifactId>
			<version>2.2.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.metatype</artifactId>
			<version>1.2.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.cm.json</artifactId>
			<version>1.0.6</version>
			<scope>provided</scope>
		</dependency>


		<!-- karaf itself -->
		<dependency>
			<groupId>org.ops4j.pax.url</groupId>
			<artifactId>pax-url-aether</artifactId>
			<version>${pax-url-aether}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.istack</groupId>
			<artifactId>istack-commons-runtime</artifactId>
			<version>3.0.12</version>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf.specs</groupId>
			<artifactId>org.apache.karaf.specs.activator</artifactId>
			<version>4.4.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf.diagnostic</groupId>
			<artifactId>org.apache.karaf.diagnostic.boot</artifactId>
			<version>4.4.5</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>2.3.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.framework</artifactId>
			<version>7.0.5</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>txw2</artifactId>
			<version>2.3.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.servicemix.specs</groupId>
			<artifactId>org.apache.servicemix.specs.activation-api-1.2.1</artifactId>
			<version>1.2.1_3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf.jaas</groupId>
			<artifactId>org.apache.karaf.jaas.boot</artifactId>
			<version>4.4.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.karaf</groupId>
			<artifactId>org.apache.karaf.main</artifactId>
			<version>4.4.5</version>
		</dependency>
	</dependencies>
	<build>
		<defaultGoal>${goals}</defaultGoal>
	</build>
</project>